--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-    <h3 class="h3">All Projects</h3>
+    <h3 class="h3">Other Projects</h3>
     
     {% include projects.html %}   
     
