--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: master
 ---
 
-<section class="resume">
+<main class="resume">
   {{ content }}
-</section>
-<a href="{{ site.baseurl }}/">Return to homepage</a>
+</main>
+<a href="/" class="btn view-portfolio">View Portfolio</a>
