updated font weight for buttons

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -183,7 +183,7 @@ html {
     text-decoration: none;
     margin: 1rem auto;
     
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 0.8rem;
     
     box-shadow: 0 2px 4px rgba(0,0,0,0.5);
